# haskell-tree-sitter

tree-sitter-javascript/: tree-sitter-javascript.cabal
